# homekit-bridge-sample-linux

./: .gitmodules  CMakeLists.txt  README.md  build.sh
source/: CMakeLists.txt  DeviceMonitor.c  HomeKitStack.c  HomeKitStack.h  main.c
source/device/definition/airconditioner/: AirConditioner.c  AirConditioner.h  AirConditioner_10_CurrentHeatingCoolingState.c  AirConditioner_10_CurrentHeatingCoolingState.h  AirConditioner_11_TargetHeatingCoolingState.c  AirConditioner_11_TargetHeatingCoolingState.h  AirConditioner_12_CurrentTemperature.c  AirConditioner_12_CurrentTemperature.h  AirConditioner_13_TargetTemperature.c  AirConditioner_13_TargetTemperature.h  AirConditioner_14_TemperatureDisplayUnits.c  AirConditioner_14_TemperatureDisplayUnits.h  AirConditioner_1_AccessoryInformation.c  AirConditioner_1_AccessoryInformation.h  AirConditioner_2_Identify.c  AirConditioner_2_Identify.h  AirConditioner_3_Manufacturer.c  AirConditioner_3_Manufacturer.h  AirConditioner_4_Model.c  AirConditioner_4_Model.h  AirConditioner_5_Name.c  AirConditioner_5_Name.h  AirConditioner_6_SerialNumber.c  AirConditioner_6_SerialNumber.h  AirConditioner_7_FirmwareRevision.c  AirConditioner_7_FirmwareRevision.h  AirConditioner_8_Thermostat.c  AirConditioner_8_Thermostat.h  AirConditioner_9_Name.c  AirConditioner_9_Name.h  AirConditioner_IID.h
source/device/definition/bridge/: Bridge.c  Bridge.h  BridgeIID.h  Bridge_1_AccessoryInformation.c  Bridge_1_AccessoryInformation.h  Bridge_2_Identify.c  Bridge_2_Identify.h  Bridge_3_Manufacturer.c  Bridge_3_Manufacturer.h  Bridge_4_Model.c  Bridge_4_Model.h  Bridge_5_Name.c  Bridge_5_Name.h  Bridge_6_SerialNumber.c  Bridge_6_SerialNumber.h  Bridge_7_FirmwareRevision.c  Bridge_7_FirmwareRevision.h  Bridge_8_HapProtocolInformation.c  Bridge_8_HapProtocolInformation.h  Bridge_9_Version.c  Bridge_9_Version.h
source/device/definition/lightbulb/: Lightbulb.c  Lightbulb.h  LightbulbIID.h  P_1_2_Identify.c  P_1_3_Manufacturer.c  P_1_4_Model.c  P_1_5_Name.c  P_1_6_SerialNumber.c  P_1_7_FirmwareRevision.c  P_8_10_Brightness.c  P_8_9_On.c
source/device/handler/: OnPropertyGet.c  OnPropertySet.c
source/device/handler/airconditioner/: AirConditioner_doPropertyGet.c  AirConditioner_doPropertyGet.h  AirConditioner_doPropertySet.c  AirConditioner_doPropertySet.h
source/device/handler/airconditioner/1/: AirConditioner_1_AccessoryInformation_doGet.c  AirConditioner_1_AccessoryInformation_doGet.h  AirConditioner_1_AccessoryInformation_doSet.c  AirConditioner_1_AccessoryInformation_doSet.h
source/device/handler/airconditioner/8/: AirConditioner_8_Thermostat_doGet.c  AirConditioner_8_Thermostat_doGet.h  AirConditioner_8_Thermostat_doSet.c  AirConditioner_8_Thermostat_doSet.h  HeatingCoolingState.h  TemperatureDisplayUnits.h
source/device/handler/bridge/: Bridge_doPropertyGet.c  Bridge_doPropertyGet.h  Bridge_doPropertySet.c  Bridge_doPropertySet.h
source/device/handler/bridge/1/: Bridge_1_AccessoryInformation_doGet.c  Bridge_1_AccessoryInformation_doSet.c  Bridge_1_AccessoryInformation_doSet.h
source/device/handler/bridge/8/: Bridge_8_HapProtocolInformation_doGet.c  Bridge_8_HapProtocolInformation_doSet.c
source/device/handler/bridge/Bridge_1_AccessoryInformation/: Bridge_1_AccessoryInformation_doGet.c  Bridge_1_AccessoryInformation_doGet.h  Bridge_1_AccessoryInformation_doSet.c
source/device/handler/bridge/Bridge_8_HapProtocolInformation/: Bridge_8_HapProtocolInformation_doGet.c  Bridge_8_HapProtocolInformation_doGet.h  Bridge_8_HapProtocolInformation_doSet.c  Bridge_8_HapProtocolInformation_doSet.h
source/device/handler/lightbulb/: Lightbulb_doPropertyGet.c  Lightbulb_doPropertyGet.h  Lightbulb_doPropertySet.c  Lightbulb_doPropertySet.h
source/device/handler/lightbulb/S_1_AccessoryInformation/: S_1_AccessoryInformation_doGet.c  S_1_AccessoryInformation_doSet.c
source/device/handler/lightbulb/S_8_Lightbulb/: S_8_Lightbulb_doGet.c  S_8_Lightbulb_doSet.c
source/device/initializer/: InitializeConfiguration.c  InitializeConfiguration.h
